# superboite-backend

./: .env_sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
secrets/: service-account-drive.json
superboite_api/: main.py
